# wildlife-age-sex-demo

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP_TUTORIAL.md  demo.py  megadetector.py  pyproject.toml  requirements.txt
configs/: baseline__config.toml  default_baseline__config.toml  demo__config.toml  example__config.toml  example_complete__config.toml  finetuned_wildlife__config.toml  performance_test__config.toml  test__config.toml  wildlife_baseline__config.toml
configs/age/: experiment10__config.toml  experiment11__config.toml  experiment12__config.toml  experiment13__config.toml  experiment1__config.toml  experiment2__config.toml  experiment3__config.toml  experiment4__config.toml  experiment5__config.toml  experiment6__config.toml  experiment7__config.toml  experiment8__config.toml  experiment9__config.toml  experiment_augmented__config.toml
configs/archive/: finetuned_wildlife__config.toml  wildlife_baseline__config.toml
configs/final_results/: final_age_experiment13__config.toml  final_age_experiment3__config.toml  final_age_experiment6__config.toml  final_sex_experiment12__config.toml  final_sex_experiment5__config.toml  final_sex_experiment8__config.toml
configs/sex/: experiment10__config.toml  experiment11__config.toml  experiment12__config.toml  experiment13__config.toml  experiment1__config.toml  experiment2__config.toml  experiment3__config.toml  experiment4__config.toml  experiment5__config.toml  experiment6__config.toml  experiment7__config.toml  experiment8__config.toml  experiment9__config.toml  experiment_augmented__config.toml
data/demo/: annotation_config.json  annotations.json  enriched_data.parquet  preprocessed_demo_data.parquet  sample_metadata.csv
data/demo/raw/: md_unlabeled.json
data/test/: annotation_config.json  annotations.csv  md_unlabeled.json
frontend/: app.py  requirements.txt
frontend/tabs/: annotation.py  error_viewing.py  image_viewing.py  results.py  results_metrics.py  uncertainty_viewing.py
models/age/experiment1/: 20250721T112110__eval_errors.parquet  20250721T112110__eval_results.json  20250727T111703__eval_errors.parquet  20250727T111703__eval_results.json  20250727T111703__eval_uncertain_images.parquet  20250727T181248__eval_errors.parquet  20250727T181248__eval_results.json  20250727T181248__eval_uncertain_images.parquet  20250827T144758__eval_errors.parquet  20250827T144758__eval_results.json  20250827T144758__eval_uncertain_images.parquet  20250915T010127__eval_errors.parquet  20250915T010127__eval_results.json  20250915T010127__eval_uncertain_images.parquet  tuning_specs.json
models/age/experiment10/: 20250721T112238__eval_errors.parquet  20250721T112238__eval_results.json  20250727T123659__eval_errors.parquet  20250727T123659__eval_results.json  20250727T123659__eval_uncertain_images.parquet  20250727T192515__eval_errors.parquet  20250727T192515__eval_results.json  20250727T192515__eval_uncertain_images.parquet  20250827T025918__eval_errors.parquet  20250827T025918__eval_results.json  20250827T025918__eval_uncertain_images.parquet  20250914T234406__eval_errors.parquet  20250914T234406__eval_results.json  20250914T234406__eval_uncertain_images.parquet  tuning_specs.json
models/age/experiment11/: 20250721T112246__eval_errors.parquet  20250721T112246__eval_results.json  20250727T124239__eval_errors.parquet  20250727T124239__eval_results.json  20250727T124239__eval_uncertain_images.parquet  20250727T193014__eval_errors.parquet  20250727T193014__eval_results.json  20250727T193014__eval_uncertain_images.parquet  20250827T032700__eval_errors.parquet  20250827T032700__eval_results.json  20250827T032700__eval_uncertain_images.parquet  20250914T235906__eval_errors.parquet  20250914T235906__eval_results.json  20250914T235906__eval_uncertain_images.parquet  tuning_specs.json
models/age/experiment12/: 20250721T112255__eval_errors.parquet  20250721T112255__eval_results.json  20250727T124932__eval_errors.parquet  20250727T124932__eval_results.json  20250727T124932__eval_uncertain_images.parquet  20250727T194105__eval_errors.parquet  20250727T194105__eval_results.json  20250727T194105__eval_uncertain_images.parquet  20250827T035714__eval_errors.parquet  20250827T035714__eval_results.json  20250827T035714__eval_uncertain_images.parquet  20250915T002226__eval_errors.parquet  20250915T002226__eval_results.json  20250915T002226__eval_uncertain_images.parquet  tuning_specs.json
models/age/experiment13/: 20250721T112304__eval_errors.parquet  20250721T112304__eval_results.json  20250727T125509__eval_errors.parquet  20250727T125509__eval_results.json  20250727T125509__eval_uncertain_images.parquet  20250727T195105__eval_errors.parquet  20250727T195105__eval_results.json  20250727T195105__eval_uncertain_images.parquet  20250827T042352__eval_errors.parquet  tuning_specs.json  (+5 more)
models/baseline_model/: 20250531T120923__eval_results.json  20250609T085605__eval_results.json  tuning_specs.json
models/demo_model/: 20250916T142827__eval_errors.parquet  20250916T142827__eval_results.json  20250916T142827__eval_uncertain_images.parquet  tuning_specs.json
models/finetuned_wildlife/: 20250611T143824__eval_results.json  20250611T145143__eval_results.json  tuning_specs.json
models/lwf_pretrained_model/: labels_map.json
models/test_model/: 20250527T081529__eval_results.json  20250608T101106__eval_results.json  20250620T090021__eval_errors.parquet  20250620T090021__eval_results.json  20250713T185026__eval_errors.parquet  20250713T185026__eval_results.json  tuning_specs.json
models/wildlife_baseline/: 20250609T090422__eval_results.json  tuning_specs.json
scripts/: enrichment.py  evaluate.py  megadetector.py  preprocess.py  train.py
test_data/: labeled_bbox_data.parquet
test_data/data__red_deer_cropped/: bbox_label_results.csv  bbox_map_unlabeled.json  md_unlabeled.json
wildlifeml/: __init__.py  utils.py
wildlifeml/io/: __init__.py  input.py  output.py  utils.py
wildlifeml/preprocess/: __init__.py  augmentation.py  split.py  transform.py
wildlifeml/train/: __init__.py  evaluate.py  split.py  tune.py
(+753 files in other folders)
