[project]
name = "wildlifeml"
version = "0.1.0"
description = "Machine learning project to extract sex (male/female) and age (young/old) characteristics of certain species using camera trap images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "numpy>=1.23.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "poethepoet>=0.34.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "tomli>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wildlifeml"]

[tool.ruff]
line-length = 99
target-version = "py310"
lint.select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
lint.ignore = ["PLR2004", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.poe.tasks.configure-dirs]
cmd = "mkdir -p $WORKING_DIR/configs $WORKING_DIR/logs $WORKING_DIR/data $WORKING_DIR/models"
args = [
    {name="WORKING_DIR", options=["-wd", "--working-dir"], default=".", help="Path to wd containing data and results directories. Uses cwd if no arg passed."},
]

[tool.poe.tasks.run-megadetector]
shell = """
    uv sync --group megadetector
    uv run megadetector.py --image-dir $IMAGE_DIR
"""
args = [
    {name="IMAGE_DIR", options=["--image-dir", "-i"], help="Path to image directory on which to run MegaDetector"}
]

# Individual script commands
[tool.poe.tasks.preprocess]
shell = """
    # Check if CONFIG_PATH is a directory or single file
    if [ -d "$CONFIG_PATH" ]; then
        echo "Processing all .toml config files in directory: $CONFIG_PATH" && \
        for config_file in "$CONFIG_PATH"/*.toml; do
            if [ -f "$config_file" ]; then
                echo "Starting preprocessing with config: $config_file" && \
                uv sync --group pipeline && \
                uv pip install -U opencv-python && \
                uv run scripts/preprocess.py --config "$config_file" && \
                echo "Preprocessing completed for: $config_file"
            fi
        done
        echo "All config files in directory processed successfully!"
    else
        echo "Starting preprocessing with config: $CONFIG_PATH" && \
        uv sync --group pipeline && \
        uv pip install -U opencv-python && \
        uv run scripts/preprocess.py --config "$CONFIG_PATH" && \
        echo "Preprocessing completed successfully!"
    fi
"""
args = [
    {name="CONFIG_PATH", options=["-c", "--config"], help="Path to config file or directory containing .toml config files relative to wd."}
]

[tool.poe.tasks.train]
shell = """
    # Check if CONFIG_PATH is a directory or single file
    if [ -d "$CONFIG_PATH" ]; then
        echo "Processing all .toml config files in directory: $CONFIG_PATH" && \
        for config_file in "$CONFIG_PATH"/*.toml; do
            if [ -f "$config_file" ]; then
                echo "Starting training with config: $config_file" && \
                uv sync --group pipeline && \
                uv pip install -U opencv-python && \
                uv run scripts/train.py --config "$config_file" && \
                echo "Training completed for: $config_file"
            fi
        done
        echo "All config files in directory processed successfully!"
    else
        echo "Starting training with config: $CONFIG_PATH" && \
        uv sync --group pipeline && \
        uv pip install -U opencv-python && \
        uv run scripts/train.py --config "$CONFIG_PATH" && \
        echo "Training completed successfully!"
    fi
"""
args = [
    {name="CONFIG_PATH", options=["-c", "--config"], help="Path to config file or directory containing .toml config files relative to wd."}
]

[tool.poe.tasks.evaluate]
shell = """
    # Check if CONFIG_PATH is a directory or single file
    if [ -d "$CONFIG_PATH" ]; then
        echo "Processing all .toml config files in directory: $CONFIG_PATH" && \
        for config_file in "$CONFIG_PATH"/*.toml; do
            if [ -f "$config_file" ]; then
                echo "Starting evaluation with config: $config_file" && \
                uv sync --group pipeline && \
                uv pip install -U opencv-python && \
                uv run scripts/evaluate.py --config "$config_file" && \
                echo "Evaluation completed for: $config_file"
            fi
        done
        echo "All config files in directory processed successfully!"
    else
        echo "Starting evaluation with config: $CONFIG_PATH" && \
        uv sync --group pipeline && \
        uv pip install -U opencv-python && \
        uv run scripts/evaluate.py --config "$CONFIG_PATH" && \
        echo "Evaluation completed successfully!"
    fi
"""
args = [
    {name="CONFIG_PATH", options=["-c", "--config"], help="Path to config file or directory containing .toml config files relative to wd."}
]

# Run pipeline from top-level wildlife-age-sex directory
[tool.poe.tasks.run-pipeline]
# updating opencv-python resolves versioning issue
shell = """
    # Check if CONFIG_PATH is a directory or single file
    if [ -d "$CONFIG_PATH" ]; then
        echo "Processing all .toml config files in directory: $CONFIG_PATH" && \
        for config_file in "$CONFIG_PATH"/*.toml; do
            if [ -f "$config_file" ]; then
                echo "Starting pipeline execution with config: $config_file" && \
                uv sync --group pipeline && \
                uv pip install -U opencv-python && \
                echo "Dependencies synced. Starting preprocessing..." && \
                uv run scripts/preprocess.py --config "$config_file" && \
                echo "Preprocessing completed. Starting training..." && \
                uv run scripts/train.py --config "$config_file" && \
                echo "Training completed. Starting evaluation..." && \
                uv run scripts/evaluate.py --config "$config_file" && \
                echo "Pipeline execution completed for: $config_file"
            fi
        done
        echo "All config files in directory processed successfully!"
    else
        echo "Starting pipeline execution with config: $CONFIG_PATH" && \
        uv sync --group pipeline && \
        uv pip install -U opencv-python && \
        echo "Dependencies synced. Starting preprocessing..." && \
        uv run scripts/preprocess.py --config "$CONFIG_PATH" && \
        echo "Preprocessing completed. Starting training..." && \
        uv run scripts/train.py --config "$CONFIG_PATH" && \
        echo "Training completed. Starting evaluation..." && \
        uv run scripts/evaluate.py --config "$CONFIG_PATH" && \
        echo "Pipeline execution completed successfully!"
    fi
"""
args = [
    {name="CONFIG_PATH", options=["-c", "--config"], default="configs/test__config.toml", help="Path to config file or directory containing .toml config files relative to wd."}
]

[tool.poe.tasks.run-experiment]
# updating opencv-python resolves versioning issue
shell = """
    # Check if CONFIG_PATH is a directory or single file
    if [ -d "$CONFIG_PATH" ]; then
        echo "Processing all .toml config files in directory: $CONFIG_PATH" && \
        for config_file in "$CONFIG_PATH"/*.toml; do
            if [ -f "$config_file" ]; then
                echo "Starting experiment execution with config: $config_file" && \
                uv sync --group pipeline && \
                uv pip install -U opencv-python && \
                echo "Dependencies synced. Using preprocessed data. Starting training..." && \
                uv run scripts/train.py --config "$config_file" && \
                echo "Training completed. Starting evaluation..." && \
                uv run scripts/evaluate.py --config "$config_file" && \
                echo "Experiment execution completed for: $config_file"
            fi
        done
        echo "All config files in directory processed successfully!"
    else
        echo "Starting experiment execution with config: $CONFIG_PATH" && \
        uv sync --group pipeline && \
        uv pip install -U opencv-python && \
        echo "Dependencies synced. Using preprocessed data. Starting training..." && \
        uv run scripts/train.py --config "$CONFIG_PATH" && \
        echo "Training completed. Starting evaluation..." && \
        uv run scripts/evaluate.py --config "$CONFIG_PATH" && \
        echo "Experiment execution completed successfully!"
    fi
"""
args = [
    {name="CONFIG_PATH", options=["-c", "--config"], default="configs/test__config.toml", help="Path to config file or directory containing .toml config files relative to wd."}
]

[tool.poe.tasks.build-frontend]
shell = """
    uv sync --group frontend
    uv run streamlit run frontend/app.py --server.address localhost --server.port 8501
"""

[dependency-groups]
pipeline = [
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

frontend = [
    "streamlit==1.46.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.1",
    "pillow>=10.0.0",
    "plotly>=5.18.0",
    "matplotlib",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "opencv-python>=4.11.0.86",
]

megadetector = [
    "pytorchwildlife>=1.2.3",
    "torch>=2.6.0",
]


